--- a/proj 1.css
+++ b/proj 1.css
@@ -12,7 +12,7 @@ h1{
   font-family: Aladin, sans-script;
 }
 .box{
-  background: grey;
+  background: #f8f8ff;
   padding: 10px;
   margin: 10px auto;
   border: 5px solid orange;
